# test-configparser

./: .travis.yml  setup.cfg  tox.ini
tests/: sample.ini  test-configparser.py
