[metadata]
description-file = README

[bdist_wheel]
universal = 1


[pytest]
norecursedirs = . .svn jira _build tmp* lib/third lib *.egg bin distutils build docs demo
python_files = *.py
addopts = -p no:xdist --ignore=setup.py --tb=long -rsxX -v  --maxfail=10 --pep8
testpaths = tests
rsyncignore = .hg .git
pep8ignore = E501 E265 E127 E901 E128 E402
pep8maxlinelength = 1024

[flake8]
max-line-length=160
exclude=build
statistics=yes
ignore = D100,D101,D102,D103,D104,D105,D200,D202,D204,D205,D207,D210,D211,D300,D301,D400,D401

[pep8]
exclude=build,lib,.tox,third,*.egg,docs,packages
ignore=E501,E265,E402
max-line-length=160
count=1
statistics=1
